# F_Brain

./: .env  README.md  docker-compose.yml
backend/backend/: settings.py
backend/calculator/: urls.py  views.py
frontend/src/: App.css  App.js
proxy/: Dockerfile
server/: Dockerfile  pyproject.toml  requirements.txt
