[tool.poetry]
name = "server"  # Remplace par le nom de ton projet
version = "0.1.0"  # Version initiale
description = "Mon serveur Django avec Celery"
authors = ["Leonel Fagna <leonel@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.15"
celery = "^5.4"
psycopg2-binary = "^2.9"

[tool.poetry.dev-dependencies]
black = "^23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"